Fixing NPE's by giving more limit to VRAM